# agent-runtime-kit

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  RUNBOOK.md  WIRE_PROTOCOL.md  pyproject.toml  trace_permission_flow.py
.github/workflows/: ci.yml
docs/: agent-loop.md  architecture.md  project-highlights.md  session-memory.md  skills-subagents-mcp.md  tool-permissions.md
examples/basic_run/: README.md
examples/mcp/: README.md
examples/permissions/: README.md  trace_permission_flow.py
examples/skills/: example-skill.md
scripts/: check_wire_protocol.py  generate_wire_protocol.py
tests/: conftest.py
tests/integration/: test_run_e2e.py  test_s2_dual_process.py  test_s5_permission_flow.py
tests/unit/: test_agent_profile_loader.py  test_budget.py  test_builtin_tools.py  test_commands_events.py  test_compactor.py  test_config_env.py  test_context.py  test_context_system_prompt.py  test_core_app.py  test_envelope.py  test_event_bus.py  test_event_writer.py  test_invocation.py  test_ipc_broadcaster.py  test_llm_provider.py  test_loop.py  test_mcp_tool.py  test_memory_loader.py  test_note_save_tool.py  test_permission_manager.py  test_permission_policy.py  test_read_file.py  test_runner.py  test_session_manager.py  test_session_store.py  test_skill_loader.py  test_socket_client.py  test_socket_server.py  test_spawn_agent_tool.py  test_stdout_printer.py  test_task_manager.py  test_task_model.py  test_tool_params.py  test_tool_registry.py  test_tool_retry.py  test_trace_writer.py  (+2 more)
(+70 files in other folders)
